--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev-server": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"nodemon ./dist/index.js\"",
-    "start": "node ./bin/www"
+    "start": "nodemon ./dist/index.js"
   },
   "repository": {
     "type": "git",
